fix: disable bouncing scroll bug on safari using pure css

--- a/src/style.css
+++ b/src/style.css
@@ -2,8 +2,15 @@
 @tailwind components;
 @tailwind utilities;
 
-#page {
-    height: 100svh;
-    overflow: auto;
+#app {
+    height: 100vh;
+    width: 100vw;
+    overflow-y: auto;
     -webkit-overflow-scrolling: touch;
+}
+
+html,
+body {
+    position: fixed;
+    overflow: hidden;
 }
